Add @expo/vector-icons and reject incompatible JDKs
Without @expo/vector-icons, react-native-paper cannot find its icon font
and the FAB, the search icon and the clear button are invisible: the app
renders but cannot be used.

doctor.mjs now rejects JDKs newer than 21. This is not theoretical: with
JDK 24+ the build dies in configureCMakeDebug because AGP forks prefab,
reportErrors turns any stderr output into an exception, and newer JDKs
write a native-access warning there. The message you see is the warning,
not the cause. CLAUDE.md documents the JDK 21 requirement.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>